# open-omniparser-dataset

./: .gitignore  README.md  websites.json
dataset-creation/: README.md  bun.lockb  config.json  config.ts  format.ts  index.ts  lib.ts  package.json  utils.ts
dataset-creation/types/: index.ts
omniparser/: .gitignore  DFine_finetune_on_a_custom_dataset.ipynb  README.md  dataset.py  metrics.py  pyproject.toml  to_hf_hub.py  train.ipynb  train.py  transform.py  utils.py
visualizer/: main.ipynb  main.py  pyproject.toml
